Hologram bug fix, async bug fix + drop-items-on-ground